--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -1,6 +1,8 @@
 
 nav {
   background-color: #add8e6;
+  border-radius:10px;
+  box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
 }
 
 nav ul {
@@ -86,7 +88,7 @@ h3:hover{
 }
 .cuatro{
 	grid-area:cuatro;
-	box-shadow:2px 4px 4px rgb(0 0 0 / 25%)
+	box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
 	border-radius:10px;
 }
 .cinco{
