--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -3,6 +3,9 @@ nav {
   background-color: #add8e6;
   border-radius:10px;
   box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
+  /*position: fixed; /* Set the navbar to fixed position */
+ /* top: 10; /* Position the navbar at the top of the page */
+ /* width: 100%; /* Full width */
 }
 
 nav ul {
@@ -26,13 +29,33 @@ nav ul li a {
 
 nav ul li a:hover {
   background-color: #0000ff;
+  border-bottom: 3px solid white;
+
 }
 
 #fechaYHora{
 	background-color: #add8e6;
 	color: black;
 }
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
 
+#myBtn:hover {
+  background-color: blue; /* Add a dark-grey background on hover */
+}
 h3 {
 	color:black;
 	background-color:red;
@@ -65,6 +88,7 @@ h3:hover{
 	 grid-columns:50 % 50% 50%;
 	grid-gap: 20px;
 	height: 100vh;
+
 
 }
 .uno{
@@ -104,10 +128,6 @@ h3:hover{
 	justify-content:center;
 
 }
-
-
-
-
 
 .item{
 	background-color: #add8e6;
