--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -3,9 +3,9 @@ nav {
   background-color: #add8e6;
   border-radius:10px;
   box-shadow:2px 4px 4px rgb(0 0 0 / 25%);
-  /*position: fixed; /* Set the navbar to fixed position */
- /* top: 10; /* Position the navbar at the top of the page */
- /* width: 100%; /* Full width */
+  /*position: fixed; 
+ top: 0; 
+ width: 100%; */
 }
 
 nav ul {
@@ -71,6 +71,12 @@ h3:hover{
 	border-radius:10px;
 }
 
+.img{
+	
+width: 50%; 
+height: auto;
+
+}
 .blue {
 	color: white;
 	border-radius:10px;
@@ -80,10 +86,12 @@ h3:hover{
 .container {
 	display: grid;
 	/* grid-template: 120 px 1fr 120 px / 400 px 1fr;*/
-	grid-template:  50 % 50 % / 50% 50%;
+	grid-template:  25 % 25 % 25 % 25 %/ 50% 50%;
 	grid-template-areas:"uno dos"
 						"tres cuatro"
 	 					"cinco seis" 
+	 					"siete ocho"
+	 					"nueve diez" 
 	 					;
 	 grid-columns:50 % 50% 50%;
 	grid-gap: 20px;
@@ -128,6 +136,26 @@ h3:hover{
 	justify-content:center;
 
 }
+.siete{
+	grid-area: siete;
+	box-shadow: 2px 4px 4 px rgb(0 0 0 /25 %);
+	border-radius: 10 px;
+	justify-content: center;
+}
+.ocho{
+	grid-area:ocho;
+	box-shadow: 2px 4px 4 px rgb(0 0 0 /25 %);
+	border-radius: 10 px;
+	justify-content: center;
+
+}
+.nueve{
+	grid-area:nueve;
+	box-shadow: 2px 4px 4 px rgb(0 0 0 /25 %);
+	border-radius: 10 px;
+	justify-content: center;
+
+}
 
 .item{
 	background-color: #add8e6;
@@ -135,4 +163,38 @@ h3:hover{
 	color:black;
 	border-radius: 10 px;
 	justify-content:center;
+}
+/* Style all font awesome icons */
+
+  .fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+
+}
+
+
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
 }
