--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -156,6 +156,13 @@ height: auto;
 	justify-content: center;
 
 }
+.diez{
+
+	grid-area:diez;
+	box-shadow: 2px 4px 4 px rgb(0 0 0 /25 %);
+	border-radius: 10 px;
+	justify-content: center;
+}
 
 .item{
 	background-color: #add8e6;
