--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -170,6 +170,7 @@ height: auto;
 	background-color: #add8e6;
 	padding: 10px;
 	color:black;
+	box-shadow: 2px 4px 4 px rgb(0 0 0 /25 %);
 	border-radius: 10 px;
 	justify-content:center;
 }
