--- a/css/estilos2.css
+++ b/css/estilos2.css
@@ -85,20 +85,15 @@ height: auto;
 
 .container {
 	display: grid;
-	/* grid-template: 120 px 1fr 120 px / 400 px 1fr;*/
-	/*grid-template:  25 % 25 % 25 % 25 % 25 % 25 % 25 % 25 % 25 % 25 % 25 % 25 %/ 50 % 50 %;*/
+	grid-template: 50% 50% / 50% 50%;
 	grid-template-areas:"uno dos"
 						"tres cuatro"
 	 					"cinco seis" 
 	 					"siete ocho"
 	 					"nueve diez" 
-	 					"once doce"
-	 					;
-	 grid-columns:auto;
-	 grid-template-columns: auto;
-	grit-template-rows:auto;
+	 ;
 	grid-gap: 20px;
-	/*height: 100vh;*/
+	
 
 
 }
